force-app/main/default/objects/Account/fields/DirectorateNumber__c.field-meta.xml
<CustomField>
    <fullName>DirectorateNumber__c</fullName>
    <label>Directorate Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>