force-app/main/default/objects/Account/fields/EntitledToDeductVAT__c.field-meta.xml
<CustomField>
    <fullName>EntitledToDeductVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitled To Deduct VAT</label>
    <type>Checkbox</type>
</CustomField>