force-app/main/default/objects/Account/fields/LegalForm__c.field-meta.xml
<CustomField>
    <fullName>LegalForm__c</fullName>
    <label>Legal Form</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>individuals</fullName>
            </value>
            <value>
                <fullName>partnerships</fullName>
            </value>
            <value>
                <fullName>corporations</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>