force-app/main/default/objects/Account/fields/LegalFormSubType__c.field-meta.xml
<CustomField>
    <fullName>LegalFormSubType__c</fullName>
    <label>Legal Form Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LegalForm__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>individual_entrepreneur</fullName>
            </value>
            <value>
                <fullName>registered_merchant</fullName>
            </value>
            <value>
                <fullName>simple_partnership</fullName>
            </value>
            <value>
                <fullName>un-incorporated_association</fullName>
            </value>
            <value>
                <fullName>commercial_partnerships</fullName>
            </value>
            <value>
                <fullName>partnership_company</fullName>
            </value>
            <value>
                <fullName>incorporated_association</fullName>
            </value>
            <value>
                <fullName>limited_by_share</fullName>
            </value>
            <value>
                <fullName>registered cooperative</fullName>
            </value>
            <value>
                <fullName>corporation under public law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>