force-app/main/default/objects/Account/fields/LegalFormSubTypeL2__c.field-meta.xml
<CustomField>
    <fullName>LegalFormSubTypeL2__c</fullName>
    <label>Legal Form Sub Type L2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LegalFormSubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>general_partnership</fullName>
                <label>general partnership</label>
            </value>
            <value>
                <fullName>limited_partnership</fullName>
                <label>limited partnership</label>
            </value>
            <value>
                <fullName>limited_liability_partnership</fullName>
                <label>limited liability partnership</label>
            </value>
            <value>
                <fullName>association_established_before_1_January_1900</fullName>
                <label>association established before 1 January 1900</label>
            </value>
            <value>
                <fullName>commercial_purpose</fullName>
                <label>commercial purpose</label>
            </value>
            <value>
                <fullName>publicly_traded_partnership</fullName>
                <label>publicly traded partnership</label>
            </value>
            <value>
                <fullName>company_with_limited_liability</fullName>
                <label>company with limited liability</label>
            </value>
            <value>
                <fullName>public_limited_company</fullName>
                <label>public limited company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>