force-app/main/default/objects/Account/fields/LegalFormSubTypeL3__c.field-meta.xml
<CustomField>
    <fullName>LegalFormSubTypeL3__c</fullName>
    <label>Legal Form Sub Type L3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LegalFormSubTypeL2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GmbH_&amp;_Co._KG</fullName>
                <label>GmbH &amp; Co. KG</label>
            </value>
            <value>
                <fullName>AG_&amp;_Co._KG</fullName>
                <label>AG &amp; Co. KG</label>
            </value>
            <value>
                <fullName>GmbH_&amp;_Co._OHG</fullName>
                <label>GmbH &amp; Co. OHG</label>
            </value>
            <value>
                <fullName>GmbH_&amp;_Co._KGaA</fullName>
                <label>GmbH &amp; Co. KGaA</label>
            </value>
            <value>
                <fullName>AG_&amp;_Co._KGaA</fullName>
                <label>AG &amp; Co. KGaA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>